@@ -15,12 +15,14 @@
         <maven.compile.target>11</maven.compile.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <aws-sdk.version>2.15.28</aws-sdk.version>
-        <jackson.version>2.11.0</jackson.version>
         <jetty.version>11.0.5</jetty.version>
-        <jruby.version>9.2.17.0</jruby.version>
-        <logback.version>1.2.8</logback.version>
-        <surefire.version>3.0.0-M3</surefire.version>
+        <aws-sdk.version>2.21.4</aws-sdk.version>
+        <jackson.version>2.15.2</jackson.version>
+        <jruby.version>9.4.3.0</jruby.version>
+        <surefire.version>3.0.0-M5</surefire.version>
+        <seleniumhq.version>2.53.1</seleniumhq.version><!-- There are many new versions for this library 4.10.0 latest-->
+        <logback.version>1.2.13</logback.version> <!-- The next two need to be updated in lockstep latest version 1.4 -->
+        <slf4j.version>1.7.36</slf4j.version> <!-- Latest version 2.0.7 -->
     </properties>
 
     <developers>
@@ -70,25 +72,25 @@
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
-            <version>6.1</version>
+            <version>7.4</version>
         </dependency>
         <!-- Heap-based object cache: https://github.com/ben-manes/caffeine-->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
-            <version>2.5.6</version>
+            <version>3.1.6</version>
         </dependency>
         <!-- Used by HeapCache -->
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>3.5.1</version>
+            <version>4.0.0-rc-2</version>
         </dependency>
         <!-- Used by JdbcSourceTest and JdbcCacheTest -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.196</version>
+            <version>2.2.220</version>
             <scope>test</scope>
         </dependency>
         <!-- Used by com.mortennobel.imagescaling -->
@@ -101,19 +103,19 @@
         <dependency>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>azure-storage</artifactId>
-            <version>5.2.0</version>
+            <version>8.6.6</version>
         </dependency>
         <!-- HTTP client used by HttpSource -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>3.13.1</version>
+            <version>5.0.0-alpha.12</version>
         </dependency>
         <!-- Provides a JDBC connection pool for JdbcSource and JdbcCache -->
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
-            <version>2.7.2</version>
+            <version>4.0.3</version> <!-- Pinned for Java 8 https://github.com/brettwooldridge/HikariCP#artifacts -->
         </dependency>
         <!-- Manages the test configuration. -->
         <dependency>
@@ -126,7 +128,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <version>2.13.0</version>
         </dependency>
         <dependency>
             <groupId>edu.illinois.library</groupId>
@@ -137,63 +139,64 @@
         <dependency>
             <groupId>io.lettuce</groupId>
             <artifactId>lettuce-core</artifactId>
-            <version>6.0.1.RELEASE</version>
+            <version>6.2.7.RELEASE</version>
         </dependency>
         <!-- Dependency on part of Java EE that's available by default in Java 8
         but not 9 -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.3.0</version>
+            <version>2.4.0-b180830.0359</version>
         </dependency>
         <!-- Enhanced ImageIO TIFF plugin supporting BigTIFF:
          https://github.com/geosolutions-it/imageio-ext/ -->
         <dependency>
             <groupId>it.geosolutions.imageio-ext</groupId>
             <artifactId>imageio-ext-tiff</artifactId>
+            <!-- This seemed latest version 1.3.2: https://github.com/geosolutions-it/imageio-ext 2023 -->
             <version>1.3.2</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>4.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.6</version>
+            <version>3.12.0</version>
         </dependency>
         <!-- Provides PDFBox for PdfBoxProcessor. Note that there are also some
         other dependencies in this POM used only by PDFBox. -->
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
-            <version>2.0.23</version>
+            <version>2.0.29</version> <!-- v3 still in beta -->
         </dependency>
         <!-- Assists PDFBox in decoding JBIG2-encoded images -->
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>jbig2-imageio</artifactId>
-            <version>3.0.3</version>
+            <version>3.0.4</version>
         </dependency>
         <!-- JUnit for unit tests. -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.4.2</version>
+            <version>5.10.0-RC1</version>
             <scope>test</scope>
         </dependency>
         <!-- Performance tests -->
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
-            <version>1.19</version>
+            <version>1.36</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-generator-annprocess</artifactId>
-            <version>1.19</version>
+            <version>1.36</version>
             <scope>test</scope>
         </dependency>
         <!-- Assists in parsing XMP metadata in RDF/XML. Also part of the de
@@ -202,30 +205,30 @@
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-core</artifactId>
-            <version>3.13.1</version>
+            <version>4.10.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-arq</artifactId>
-            <version>3.13.1</version>
+            <version>4.10.0</version>
         </dependency>
         <!-- Used for media type detection -->
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
-            <version>1.24.1</version>
+            <version>2.8.0</version>
         </dependency>
         <!-- Assists PDFBox in decoding certain PDFs -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.64</version>
+            <artifactId>bcprov-jdk18on</artifactId>
+            <version>1.76</version>
         </dependency>
         <!-- Supports <if> expressions in logback.xml -->
         <dependency>
             <groupId>org.codehaus.janino</groupId>
             <artifactId>janino</artifactId>
-            <version>2.7.8</version>
+            <version>3.1.10</version>
         </dependency>
         <!-- Provides HTTP/2 support in the Jetty server.
         N.B.: ALPN support is in a different module. -->
@@ -330,45 +333,45 @@
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-engine-core</artifactId>
-            <version>2.0</version>
+            <version>2.3</version>
         </dependency>
         <!-- Selenium is used to test the control panel, using a headless HtmlUnit
         browser. -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>htmlunit-driver</artifactId>
-            <version>2.21</version>
+            <version>2.21</version> 
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-api</artifactId>
-            <version>2.53.0</version>
+            <version>${seleniumhq.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-support</artifactId>
-            <version>2.53.0</version>
+            <version>${seleniumhq.version}</version>
             <scope>test</scope>
         </dependency>
         <!-- Logging interface used by the application -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <!-- intercepts jcl log messages from Commons etc. -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
-            <version>1.7.25</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <!-- Assembles the release zip archive. -->
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-assembly-plugin</artifactId>
-            <version>3.1.1</version>
+            <version>3.6.0</version>
             <type>maven-plugin</type>
         </dependency>
         <!-- Used by S3Source & S3Cache -->
@@ -421,7 +424,8 @@
                     <runOrder>random</runOrder>
                     <reuseForks>false</reuseForks>
                     <!-- JAI requires this in JDK >= 16. -->
-                    <argLine>--illegal-access=permit</argLine>
+                    <!-- JAI requires this in JDK 16+. It should be removed when JAI is. -->
+                    <argLine>--illegal-access=permit --add-opens java.desktop/sun.awt.image=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
 
@@ -429,13 +433,13 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.1.3</version>
+                <version>4.8.3.0</version>
                 <dependencies>
                     <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs</artifactId>
-                        <version>4.1.4</version>
+                        <version>4.8.3</version>
                     </dependency>
                 </dependencies>
                 <configuration>
@@ -499,7 +503,7 @@
             <!-- Assemble the JAR into a release package. -->
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.6.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -530,7 +534,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>5.2.4</version>
+                <version>9.0.9</version>
                 <executions>
                     <execution>
                         <goals>
@@ -557,6 +561,8 @@
                         <configuration>
                             <runOrder>random</runOrder>
                             <reuseForks>false</reuseForks>
+                            <!-- JAI requires this in JDK 16+. It should be removed when JAI is. -->
+                            <argLine>--add-opens java.desktop/sun.awt.image=ALL-UNNAMED</argLine>
                             <excludes>
                                 <exclude>AzureStorage*Test</exclude>
                                 <exclude>FfmpegProcessorTest</exclude>
@@ -586,6 +592,8 @@
                         <configuration>
                             <runOrder>random</runOrder>
                             <reuseForks>false</reuseForks>
+                            <!-- JAI requires this in JDK 16+. It should be removed when JAI is. -->
+                            <argLine>--add-opens java.desktop/sun.awt.image=ALL-UNNAMED</argLine>
                             <excludes>
                                 <exclude>Azure*Test</exclude>
                             </excludes>
